# AI_Auditor

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  start.py  validate.py
app/: __init__.py  main.py
app/api/: __init__.py  routes.py
app/core/: __init__.py  config.py  exceptions.py  logging.py  middleware.py  monitoring.py  security.py
app/ingestion/: __init__.py  chunker.py  loader.py
app/models/: __init__.py  schemas.py
app/services/: drift_detector.py  rag_engine.py  vector_store.py
k8s/: deployment.yaml
scripts/: benchmark.py  start.sh
tests/: __init__.py  conftest.py  test_api.py  test_drift_detector.py  test_rag_engine.py  test_security.py  test_vector_store.py
