[tool.poetry]
name = "ai_auditor"
version = "0.1.0"
description = "Multimodal RAG engine with drift detection for financial docs"
authors = ["AI Architect <ai@local>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
langchain = "^0.1.0"
langchain-community = "^0.0.20"
huggingface-hub = "^0.20.0"
sentence-transformers = "^2.2.0"
faiss-cpu = {version = "^1.7.4", optional = true}
scikit-learn = "^1.3.0"
umap-learn = "^0.5.4"
numpy = "^1.24.0,<2.0.0"
pydantic = "^2.5.0"
loguru = "^0.7.0"
python-multipart = "^0.0.6"
prometheus-client = "^0.17.0"
pypdf = "^3.13.0"
psutil = "^5.9.0"
sentry-sdk = {version = "^1.40.0", optional = true}
openai = {version = "^1.10.0", optional = true}
anthropic = {version = "^0.18.0", optional = true}

[tool.poetry.extras]
faiss = ["faiss-cpu"]
monitoring = ["sentry-sdk"]
llm = ["openai", "anthropic"]
all = ["faiss-cpu", "sentry-sdk", "openai", "anthropic"]

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.22.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.7.0"
isort = "^5.12.0"
bandit = "^1.7.5"
safety = "^2.3.0"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
